[package]
name = "laminardb-test"
version = "0.1.0"
edition = "2021"
publish = false
description = "Test app for LaminarDB pipeline types"

[[bin]]
name = "laminardb-test"
path = "src/main.rs"

[dependencies]
# LaminarDB (path deps to local checkout)
laminar-db = { path = "../laminardb/crates/laminar-db", features = ["kafka", "postgres-cdc", "api"] }
laminar-derive = { path = "../laminardb/crates/laminar-derive" }
laminar-core = { path = "../laminardb/crates/laminar-core" }

# Arrow (match laminardb workspace versions)
arrow = { version = "57.2", default-features = true }
arrow-array = "57.2"
arrow-schema = "57.2"

# Async
tokio = { version = "1.49", features = ["full"] }

# Kafka (direct dep for producer/consumer in Phase 3)
rdkafka = { version = "0.39", features = ["cmake-build"] }
serde_json = "1"

# Postgres (direct dep for inserting test data in Phase 5)
tokio-postgres = "0.7"

# Utilities
chrono = "0.4"
rand = "0.8"

# TUI
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = "0.28"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "throughput"
harness = false
